# libsigcpp-CMake

./: CMakeLists.txt  Configure_config.cmake
cmake/: Config.cmake.in  SigCppConfigVersion.cmake.in  install.cmake
sigc++/: CMakeLists.txt  limit_reference.h  trackable.cc
sigc++/adaptors/: adaptor_trait.h  bind.h  bind_return.h  compose.h  exception_catch.h  hide.h  retype.h  retype_return.h  track_obj.h
sigc++/adaptors/lambda/: base.h  group.h  operator.h
sigc++/adaptors/lambda/macros/: base.h.m4  group.h.m4  operator.h.m4
sigc++/adaptors/macros/: bind.h.m4  bind_return.h.m4  compose.h.m4  exception_catch.h.m4  hide.h.m4  retype.h.m4  retype_return.h.m4  track_obj.h.m4
sigc++/functors/: mem_fun.h  slot.h
sigc++/functors/macros/: slot.h.m4
sigc++/macros/: retype.h.m4
